name:                gbc
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
category:            Game
build-type:          Simple
cabal-version: >=1.10

executable GBC
  main-is: Main.hs
  build-depends:
    base == 4.7.*,
    array,
    data-default,
    lens,
    mtl
  hs-source-dirs:
    src/
    ./
  default-language: Haskell2010
  default-extensions:
    FunctionalDependencies
    OverloadedStrings
    RankNTypes
    TemplateHaskell
    TypeSynonymInstances
  ghc-options: -Wall
